--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee26c0eb",
+   "id": "0bf70c98",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2b021c09",
+   "id": "29530b16",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "04facf1e",
+   "id": "f9f8b869",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8913dc61",
+   "id": "92599638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830ca877",
+   "id": "95dea22d",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5c4c82f4",
+   "id": "32912fdf",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b037f3c1",
+   "id": "df3a068e",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0ef97f4c",
+   "id": "62b98187",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c822e6",
+   "id": "db9caa14",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a07d81",
+   "id": "53a0df1b",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7a872c65",
+   "id": "25031862",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "719dd91b",
+   "id": "9b01626e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c046b781",
+   "id": "650346a3",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "170de0b2",
+   "id": "b1f660fb",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bc45f3d3",
+   "id": "51fe8dd5",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abb58e6",
+   "id": "85e0fc93",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ee195b98",
+   "id": "4f3d3938",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "68469de6",
+   "id": "c80d4a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4366462b",
+   "id": "79ab4d44",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c108091c",
+   "id": "506a3d31",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fb8edb60",
+   "id": "55deefa3",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "de237092",
+   "id": "f240e6fc",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e7e351f6",
+   "id": "4c47c452",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bbf048a1",
+   "id": "e600007a",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1467fa82",
+   "id": "1d79a730",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7cfb572a",
+   "id": "4fd2a5a8",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "40a0a499",
+   "id": "0fbe0b8a",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a2f796",
+   "id": "916a1ca4",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "16c3dabe",
+   "id": "ae8ee932",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4628723a",
+   "id": "fb501f8c",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2b2956c7",
+   "id": "7fec7070",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "363f6e95",
+   "id": "88123775",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "645bc446",
+   "id": "12a83947",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8c47c2ca",
+   "id": "ddce7a0d",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c380c51",
+   "id": "bf23b711",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9a08a124",
+   "id": "4c15344a",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456f00e8",
+   "id": "01b96bb8",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c73852f3",
+   "id": "dcefc449",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abeaf57b",
+   "id": "a89a6a54",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d60caabd",
+   "id": "9f31d422",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b096dd2",
+   "id": "c197acd4",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad24e0b",
+   "id": "d6def3d9",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "79076199",
+   "id": "9e847c7c",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ce73fb4",
+   "id": "68844d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0dd7b8a7",
+   "id": "4dbfe306",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de93c8c",
+   "id": "9a70f0c1",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fa10148d",
+   "id": "f68efca4",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b85ff83",
+   "id": "f03727a5",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1843913e",
+   "id": "d0864a8d",
    "metadata": {
     "scrolled": true
    },
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2e89e07c",
+   "id": "a3472288",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89901f72",
+   "id": "edb23a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db02b7f",
+   "id": "024ee4e2",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713fc08d",
+   "id": "4e1c7988",
    "metadata": {},
    "source": [
     "# Data structure: List\n",
@@ -1370,20 +1370,23 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "71fadd01",
+   "id": "7ada28df",
    "metadata": {},
    "outputs": [],
    "source": [
     "# if you've learned another language before, you might think that this is an array\n",
     "# IT IS NOT AN ARRAY! It is a list\n",
     "\n",
+    "# square brackets\n",
+    "# elements are separated by commas\n",
+    "# you can have an empty list defined as []\n",
     "mylist = [10, 20, 30, 40, 50]  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f3a395ac",
+   "id": "d35dee04",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "151fb900",
+   "id": "a25c2fae",
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "01dfdf8a",
+   "id": "dbd8dd6b",
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1803afc9",
+   "id": "233a7093",
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8e6d8827",
+   "id": "e8bd0091",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "bc20555f",
+   "id": "fe983044",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "1abc1ebe",
+   "id": "e295a15c",
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "935faed0",
+   "id": "86db64db",
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "00daec29",
+   "id": "27317f3a",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a6d17814",
+   "id": "568d4651",
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "9dc62c87",
+   "id": "d91d36a8",
    "metadata": {},
    "outputs": [
     {
@@ -1620,8 +1623,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "f2c6b072",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [10, 20, 30]               # list of 3 integers\n",
+    "biglist = [mylist, mylist, mylist]  # list of 3 lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "3ef02bbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "ee334486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(biglist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "b88def9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# there is something else that's important\n",
+    "\n",
+    "s = 'abcde'\n",
+    "s[0] # we can retrieve s[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "f36908e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [76], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# what happens if I try to assign to s[0]?\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43ms\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m!\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# what happens if I try to assign to s[0]?\n",
+    "\n",
+    "s[0] = '!'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a19551bb",
+   "id": "725a1ba0",
    "metadata": {},
    "outputs": [],
    "source": []
